TestingMyProfilePicture/src/app/home/home.page.scss
.image-holder {
  background-color: lightgray;
  width: 250px;
  height: 250px;
  border-radius: 15px;
  margin-top: 35px;
}

#uploadedMedia img {
  border-radius: 15px;
  object-fit: contain;
  width: 100%;
  height: 100%;
}

#instagram {
  min-width: 360px;
  margin: auto;
  max-width: 480px;
  height: auto;
  border-radius: 15px;
  padding: 15px;
  border: 2px solid black;
  position: relative;
  margin-bottom: 50px;
}

.igTopHeader {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 10px;
}

.igAvatarContainer {
  display: flex;
  align-items: center;
  justify-content: space-between;
  margin-bottom: 35px;
  margin-top: 25px;
}

.igAvatarContainer > .wrapper {
  flex-grow: 1;
  gap: 20px;
  font-weight: bold;
  margin-top: 10px;
  margin-left: 10%;
  font-size: 14px;
}

.igAvatar {
  width: 90px;
  height: 90px;
  border-radius: 50%;
  background-color: lightgray;
  background: linear-gradient(
    45deg,
    #f09433 0%,
    #e6683c 25%,
    #dc2743 50%,
    #cc2366 75%,
    #bc1888 100%
  );
  padding: 2px;
  object-fit: cover;
}

.igFeedPost {
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-wrap: wrap;
  height: 420px;
  overflow: auto;
}

.igFeedPost > img {
  flex: 1 0 33%;
  margin: 5px;
}

.igBottomBar {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-top: 5px;
  border-top: 1px solid black;
  padding-top: 10px;
}

.igBottomBar > ion-icon {
  font-size: 20px;
}

.igQuickActionBtns {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-top: 10px;
}

.igQuickActionBtns > ion-button {
  width: 48%;
}

.cropModal {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 100%;
  background-color: rgba(130, 161, 254, 0.5);
  padding: 3%;
  z-index: 9999;
  border-radius: 20px;
}

.cropModal > wrapper {
  background-color: lightblue;
  padding: 25px;
}

image-cropper {
  height: 400px;
}

